--- a/phone client/index.html
+++ b/phone client/index.html
@@ -4,7 +4,7 @@
         <title>Phone Flashlight Access Portal</title>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
-        <script src="fashs.js"></script>
+        <script src="scripts.js"></script>
     </head>
     <body>
         <h1>This page is temporarily being used for Hack GT, a collegiate hackathon</h1>
