--- a/phone client/index.html
+++ b/phone client/index.html
@@ -10,7 +10,7 @@
         <h1>This page is temporarily being used for Hack GT, a collegiate hackathon</h1>
         <input type="text" id="seatNum" name="seatNum">
         <br/>
-        <button class="switch" onclick="turnFlash()">ALLOW ACCESS TO PHONE FLASHLIGHT</button>
+        <button class="switch">ALLOW ACCESS TO PHONE FLASHLIGHT</button>
         <br/>
         <p id="testing">hi</p>
     </body>
