--- a/phone client/index.html
+++ b/phone client/index.html
@@ -5,6 +5,8 @@
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <script src="scripts.js"></script>
+        <script src="socketData.js"></script>
+        <!-- <script src="timer.js"></script> -->
     </head>
     <body>
         <h1>This page is temporarily being used for Hack GT, a collegiate hackathon</h1>
@@ -12,6 +14,6 @@
         <br/>
         <button class="switch">ALLOW ACCESS TO PHONE FLASHLIGHT</button>
         <br/>
-        <p id="testing">hi</p>
+        <!-- <p id="testing">hi1</p> -->
     </body>
 </html>
