updated demo website

--- a/client/index.html
+++ b/client/index.html
@@ -11,8 +11,9 @@
     <body>
         <h1>This page is temporarily being used for Hack GT, a collegiate hackathon</h1>
         <input type="text" id="seatNum" name="seatNum">
+        <button class="init">Initialize Torch!</button>
         <br/>
-        <button class="switch">ALLOW ACCESS TO PHONE FLASHLIGHT</button>
+        <button class="switch" disabled>Toggle Flashlight</button>
         <br/>
         <!-- <p id="testing">hi1</p> -->
     </body>
