--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <script src="LightCommander.js"></script>
-        <script src="socketData.js"></script>
+        <script src="CommandReceiver.js"></script>
         <style>
             #torchpane {
                 pointer-events: none;
