--- a/client/index.html
+++ b/client/index.html
@@ -22,7 +22,7 @@
             <br/>
             <button class="switch" disabled>Toggle Flashlight</button>
             <br/>
-            <button id="menuToggle">Toggle Menu</button>
         </div>
+        <button id='toggleMenu'>Toggle Menu</button>
     </body>
 </html>
