--- a/client/index.html
+++ b/client/index.html
@@ -16,15 +16,13 @@
             <div id="menu">
                 <h2>DigiWave</h2>
                 <div id="typewriter_container">
-                    <p>DigiWave is a free web app that turns a group of phone screens into a large display.</p>
-                    <p id="second_p">To connect to the server, please enter your seat number, and wait for a connection to be made.</p>
+                    <p>Turn your phone into a pixel in a venue-sized display.</p>
+                    <p id="second_p">Please enter your seat number below:</p>
                 </div>
                 <br/>
                 <input type="text" id="seatNum">
                 <br/>
-                <button class="init">Initialize Torch!</button>
-                <br/>
-                <button class="switch" disabled>Toggle Flashlight</button>
+                <button class="init">Go</button>
                 <br/>
             </div>
             <button id='toggleMenu'>Toggle Menu</button>
