Added error handling, promises to website

--- a/client/index.html
+++ b/client/index.html
@@ -22,10 +22,10 @@
                 <br/>
                 <input type="text" id="seatNum">
                 <br/>
-                <button class="init">Go</button>
+                <button class="init" id="init">Go</button>
                 <br/>
             </div>
-            <button id='toggleMenu'>Toggle Menu</button>
+            <!--<button id='toggleMenu'>Toggle Menu</button>-->
         </div>
     </body>
 </html>
